# nganjo-os

./: LICENSE  README.md  packages.kde.x86_64  packages.neo.x86_64  packages.x86_64  profiledef.sh
airootfs/home/nganjo/.config/: kdeglobals  konsolerc  kwinrc
airootfs/home/nganjo/.local/share/color-schemes/: NganjoOS.colors
airootfs/home/nganjo/.local/share/konsole/: Nganjo.profile  NganjoOS.colorscheme
airootfs/root/: customize_airootfs.sh
airootfs/usr/share/wayland-sessions/: nganjo-gui.desktop
docs/: BUILD.md  CONTRIBUTING.md  INSTALL.md
nganjo-os-rust/nganjo-os/: Cargo.toml  README.md
nganjo-os-rust/nganjo-os/src/: app.rs  data.rs  main.rs  modal.rs  ui.rs
nganjo-os-rust/nganjo-os/src/panels/: disk.rs  files.rs  mod.rs  packages.rs  procs.rs  services.rs  users.rs
scripts/: auto-push.sh  build.sh  setup_chroot.sh  setup_chroot_kde.sh  setup_chroot_neo.sh  setup_chroot_tui.sh
